# ChangeLog for games-server/nwn-ded
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-server/nwn-ded/ChangeLog,v 1.17 2008/02/20 07:35:16 calchan Exp $

  20 Feb 2008; Denis Dupeyron <calchan@gentoo.org> nwn-ded-1.66.ebuild,
  nwn-ded-1.67.ebuild, nwn-ded-1.68.ebuild:
  Fixed base URL of language files. Fixed Manifest, bug #206839.

*nwn-ded-1.68 (14 Nov 2006)

  14 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> +nwn-ded-1.68.ebuild:
  Version bump and closing bug #153558.

  16 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> nwn-ded-1.67.ebuild:
  Changed to determine what to unpack dynamically.  Closing bug #139981.

*nwn-ded-1.67 (16 May 2006)

  16 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> +nwn-ded-1.67.ebuild:
  Version bump to 1.67.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> nwn-ded-1.66.ebuild:
  Changed nomirror to mirror.

  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> -files/nwserver,
  -nwn-ded-1.65-r1.ebuild, nwn-ded-1.66.ebuild:
  Marking stable on x86 and cleaning up older versions.

*nwn-ded-1.66 (28 Nov 2005)

  28 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  nwn-ded-1.65-r1.ebuild, +nwn-ded-1.66.ebuild:
  Added 1.66 ebuild, updated depedencies for x86/amd64, and closing bugs
  #78059 and #113221.

  28 Jun 2005; Simon Stelling <blubb@gentoo.org> nwn-ded-1.65-r1.ebuild:
  added ~amd64 keyword

*nwn-ded-1.65-r1 (02 Jan 2005)

  02 Jan 2005; Mike Frysinger <vapier@gentoo.org> +nwn-ded-1.65-r1.ebuild,
  -nwn-ded-1.65.ebuild:
  Fix array usage with $A so it actually works #76428 by Francois Guimond.

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org> nwn-ded-1.65.ebuild:
  Add localization support #61260 by dju.

*nwn-ded-1.65 (30 Dec 2004)

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org> -nwn-ded-1.30.ebuild,
  -nwn-ded-1.61.ebuild, +nwn-ded-1.65.ebuild:
  Version bump #75457.

  05 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> nwn-ded-1.30.ebuild,