@@ -13,11 +13,13 @@ DIST NWNGerman1.68dialog.zip 7229687 RMD160 7ccf79ff3ae799d246402fa916446bd413f0
 DIST NWNItalian1.66dialog.zip 6719283 RMD160 7765dcbbfa0a14a905656c69e97281929b807ff1 SHA1 34476cfc356865f0488d44f4d604d9db78cf684b SHA256 aa95addb9bf900808a0db3327049374e0047916b607dbd5124427e3c9b0a16e9
 DIST NWNItalian1.67dialog.zip 6731492 RMD160 9f198cb9af840dba4d4a6735070aca0ad8db770a SHA1 1053c3dcdb6d15cb3f972adb82914ac29e8a3968 SHA256 95ab20460c2761602aaf94f2b021ce698e8e4f122f3c1fd1ea8ad349fb3b5842
 DIST NWNItalian1.68dialog.zip 6731492 RMD160 9f198cb9af840dba4d4a6735070aca0ad8db770a SHA1 1053c3dcdb6d15cb3f972adb82914ac29e8a3968 SHA256 95ab20460c2761602aaf94f2b021ce698e8e4f122f3c1fd1ea8ad349fb3b5842
+DIST NWNJapanese1.68dialog.zip 6343304 RMD160 aa7aa25947413cc117701255150b42a7f3a02ba5 SHA1 01af875876fc4025691200f1a630f4f43dfe35c5 SHA256 c8cc42038fb8c326caa432ff035621b200a397aa30f89862c8ba167f13144734
 DIST NWNSpanish1.66dialog.zip 6693679 RMD160 cafc347f187fb060953123187e875cfbba6b0ec8 SHA1 b04f34659efdc57aee8ca9b2e16e1b8d0f4b82e8 SHA256 60f21282f40f91e9516656358ed3287ebf6bf384a75ab5570f117c42f6c8ecdb
 DIST NWNSpanish1.67dialog.zip 6705882 RMD160 fd205ec81119bb410705019871f40f222bec86a1 SHA1 e650cf419136a98664f89bca8358057b41e3da39 SHA256 c6bd32e2156cd424598c8771b4cc2ca6ec97ecaffb29850412345b8b1a70bf7f
 DIST NWNSpanish1.68dialog.zip 6705882 RMD160 fd205ec81119bb410705019871f40f222bec86a1 SHA1 e650cf419136a98664f89bca8358057b41e3da39 SHA256 c6bd32e2156cd424598c8771b4cc2ca6ec97ecaffb29850412345b8b1a70bf7f
 EBUILD nwn-ded-1.66.ebuild 1688 RMD160 35e43068b7f1c83374700afc987fbf83b2bb0c44 SHA1 1dacc780d3a669b2c24ba02d3df7635a6015758f SHA256 010c6d806daae89a9b60c164b10506c61163e585ef14f198860ec58770fb3018
 EBUILD nwn-ded-1.67.ebuild 1797 RMD160 e75b6eea9cf7e1ce7b006bfa5678d8144e980e55 SHA1 18a327b9273a57ef67f0f9593703a3e5bc592cdd SHA256 b9d99f5052e41ae75c2af8cbd3b5e981bc68389156348e6b3dbb0c531a4dc9fa
+EBUILD nwn-ded-1.68-r1.ebuild 2537 RMD160 ca58b5faf43a40eebe927f18f2690733fc6daa67 SHA1 13f8abf4914582061023757475eabf54012b816c SHA256 ca2f36a071300c4a5de16f439befff211b6f45a30f7a50c4e2c0a4be66c62983
 EBUILD nwn-ded-1.68.ebuild 1797 RMD160 72d32bd69b71a137bc2f4c80cdab6981ed598b45 SHA1 886a3c6f0f79d8c547d5155257391b574c2a4e21 SHA256 0fb54f4f2e2bc33770a4d486fb6b14d8d756b3817e72c063148fa34d95f15435
-MISC ChangeLog 2477 RMD160 6dfc1d908ee33686b59998c90b4f7cc18d478326 SHA1 118dfcc615426fad2261e50cdb8baa58a66fccf5 SHA256 78714f809a2682b98b4be2d1a3d7cfa3754e5dbe893827996f130098ac9633ef
+MISC ChangeLog 2702 RMD160 6fdd9d6b60c9559408284ba75022f488de4f52e4 SHA1 95dfa04ebc5037819bf8a0cd7c1ba4e8c66b1dff SHA256 8c891a5659bb29a7ce017916eb27d27e093f4ff3b73d3d3c697e57271583f166
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
